# serverless_hands_on

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.ipynb
.devcontainer/: devcontainer.json
aws/: app.py
coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6_index_py.html  z_67b705ad3caeec84___init___py.html  z_67b705ad3caeec84_thread_py.html  z_743c9ee8c320be8f___init___py.html  z_743c9ee8c320be8f_post_py.html  z_743c9ee8c320be8f_thread_py.html  z_769a1ad8c06ae365___init___py.html  z_c05d1255b2b968c1___init___py.html  z_c05d1255b2b968c1_container_py.html  z_defad1a87623d8bf___init___py.html  z_defad1a87623d8bf_thread_py.html  z_e5b787a1ab6945bc___init___py.html  z_e5b787a1ab6945bc_exceptions_py.html  z_ebddae5343a4e15a___init___py.html  z_ebddae5343a4e15a_builders_py.html  z_ebddae5343a4e15a_post_py.html  z_ebddae5343a4e15a_thread_py.html  z_fc7395046b16973c___init___py.html  z_fc7395046b16973c_create_post_py.html  z_fc7395046b16973c_create_thread_py.html  z_fc7395046b16973c_delete_post_py.html  z_fc7395046b16973c_delete_thread_py.html  z_fc7395046b16973c_dto_py.html  z_fc7395046b16973c_get_thread_py.html  z_fc7395046b16973c_list_posts_py.html  z_fc7395046b16973c_list_threads_py.html
docs/: index.md
htmlcov/: class_index.html  function_index.html  index.html  z_145eef247bfb46b6_index_py.html  z_67b705ad3caeec84___init___py.html  z_67b705ad3caeec84_thread_py.html  z_743c9ee8c320be8f___init___py.html  z_743c9ee8c320be8f_post_py.html  z_743c9ee8c320be8f_thread_py.html  z_769a1ad8c06ae365___init___py.html  z_c05d1255b2b968c1___init___py.html  z_c05d1255b2b968c1_container_py.html  z_defad1a87623d8bf___init___py.html  z_defad1a87623d8bf_thread_py.html  z_e5b787a1ab6945bc___init___py.html  z_e5b787a1ab6945bc_exceptions_py.html  z_ebddae5343a4e15a___init___py.html  z_ebddae5343a4e15a_builders_py.html  z_ebddae5343a4e15a_post_py.html  z_ebddae5343a4e15a_thread_py.html  z_fc7395046b16973c___init___py.html  (+8 more)
(+84 files in other folders)
